# teabox-server

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
templates/: index.html
