[package]
name = "teabox-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "0.14.25", features = ["full"] }
infer = { version = "0.13.0", default-features = false }
multer = "2.0.4"
sha2 = "0.10.6"
base64ct = "1.6.0"